syntax = "proto3";
package base.types.gfspserver;

import "base/types/gfsperrors/error.proto";
import "base/types/gfsplimit/limit.proto";
import "base/types/gfsptask/task.proto";
import "greenfield/virtualgroup/tx.proto";

option go_package = "github.com/bnb-chain/greenfield-storage-provider/base/types/gfspserver";

message GfSpBeginTaskRequest {
  oneof request {
    base.types.gfsptask.GfSpUploadObjectTask upload_object_task = 1;
    base.types.gfsptask.GfSpResumableUploadObjectTask resumable_upload_object_task = 2;
  }
}

message GfSpBeginTaskResponse {
  base.types.gfsperrors.GfSpError err = 1;
}

message GfSpAskTaskRequest {
  base.types.gfsplimit.GfSpLimit node_limit = 1;
}

message GfSpAskTaskResponse {
  base.types.gfsperrors.GfSpError err = 1;
  oneof response {
    base.types.gfsptask.GfSpReplicatePieceTask replicate_piece_task = 2;
    base.types.gfsptask.GfSpSealObjectTask seal_object_task = 3;
    base.types.gfsptask.GfSpReceivePieceTask receive_piece_task = 4;
    base.types.gfsptask.GfSpGCObjectTask gc_object_task = 5;
    base.types.gfsptask.GfSpGCZombiePieceTask gc_zombie_piece_task = 6;
    base.types.gfsptask.GfSpGCMetaTask gc_meta_task = 7;
    base.types.gfsptask.GfSpRecoverPieceTask recover_piece_task = 8;
    base.types.gfsptask.GfSpMigrateGVGTask migrate_gvg_task = 9;
    base.types.gfsptask.GfSpGCBucketMigrationTask gc_bucket_migration_task = 10;
  }
}

message GfSpReportTaskRequest {
  oneof request {
    base.types.gfsptask.GfSpUploadObjectTask upload_object_task = 1;
    base.types.gfsptask.GfSpReplicatePieceTask replicate_piece_task = 2;
    base.types.gfsptask.GfSpSealObjectTask seal_object_task = 3;
    base.types.gfsptask.GfSpGCObjectTask gc_object_task = 4;
    base.types.gfsptask.GfSpGCZombiePieceTask gc_zombie_piece_task = 5;
    base.types.gfsptask.GfSpGCMetaTask gc_meta_task = 6;
    base.types.gfsptask.GfSpDownloadObjectTask download_object_task = 7;
    base.types.gfsptask.GfSpChallengePieceTask challenge_piece_task = 8;
    base.types.gfsptask.GfSpReceivePieceTask receive_piece_task = 9;
    base.types.gfsptask.GfSpResumableUploadObjectTask resumable_upload_object_task = 10;
    base.types.gfsptask.GfSpRecoverPieceTask recover_piece_task = 11;
    base.types.gfsptask.GfSpMigrateGVGTask migrate_gvg_task = 12;
    base.types.gfsptask.GfSpGCBucketMigrationTask gc_bucket_migration_task = 13;
  }
}

message GfSpReportTaskResponse {
  base.types.gfsperrors.GfSpError err = 1;
}

message GfSpPickVirtualGroupFamilyRequest {
  base.types.gfsptask.GfSpCreateBucketApprovalTask create_bucket_approval_task = 1;
}

message GfSpPickVirtualGroupFamilyResponse {
  base.types.gfsperrors.GfSpError err = 1;
  uint32 vgf_id = 2;
}

message GfSpNotifyMigrateSwapOutRequest {
  greenfield.virtualgroup.MsgSwapOut swap_out = 1;
}

message GfSpNotifyMigrateSwapOutResponse {
  base.types.gfsperrors.GfSpError err = 1;
}

message GfSpNotifyPreMigrateBucketRequest {
  // bucket_id is the id of the bucket
  uint64 bucket_id = 1;
}

message GfSpNotifyPreMigrateBucketResponse {
  base.types.gfsperrors.GfSpError err = 1;
  base.types.gfsptask.GfSpBucketQuotaInfo quota = 2;
}

message GfSpNotifyPostMigrateBucketRequest {
  // bucket_id is the id of the bucket
  uint64 bucket_id = 1;
  base.types.gfsptask.GfSpBucketMigrationInfo bucket_migration_info = 2;
}

message GfSpNotifyPostMigrateBucketResponse {
  base.types.gfsperrors.GfSpError err = 1;
  base.types.gfsptask.GfSpBucketQuotaInfo quota = 2;
}

message GfSpQueryTasksStatsRequest {}

message GfSpQueryTasksStatsResponse {
  TasksStats stats = 1;
}

message TasksStats {
  uint32 upload_count = 1;
  uint32 replicate_count = 2;
  uint32 seal_count = 3;
  uint32 resumable_upload_count = 4;
  uint32 max_uploading = 5;
  uint32 migrate_gvg_count = 6;
  uint32 recovery_process_count = 7;
  repeated string recovery_failed_list = 8;
}

message GfSpQueryBucketMigrationProgressRequest {
  uint64 bucket_id = 1;
}

message GfSpQueryBucketMigrationProgressResponse {
  MigrateBucketProgressMeta progress = 1;
}

message MigrateBucketProgressMeta {
  uint64 bucket_id = 1;
  uint64 subscribed_block_height = 2;
  uint32 migration_state = 3;

  uint32 gvg_total_num = 4;      // Total number of GVGs that need to be migrated
  uint32 gvg_num_migrated_finished = 5; // Number of successfully migrated GVGs
  uint32 gvg_num_gc_finished  = 6;      // Number of successfully gc finished GVGs

  uint64 pre_deducted_quota = 7;  // Quota pre-deducted by the source sp in the pre-migrate bucket phase
  uint64 recoup_quota = 8  ;    // In case of migration failure, the dest sp recoup the quota for the source sp

  uint64 last_gcObject_id = 9;  // After bucket migration is complete, the progress of GC, up to which object is GC performed.
  uint64 last_gc_gvg_id  = 10;   // which GVG is GC performed.
  uint64 migrated_bytes = 11;
}

message GfSpResetRecoveryFailedListRequest {}

message GfSpResetRecoveryFailedListResponse {
  repeated string recovery_failed_list = 1;
}

service GfSpManageService {
  rpc GfSpBeginTask(GfSpBeginTaskRequest) returns (GfSpBeginTaskResponse) {}
  rpc GfSpAskTask(GfSpAskTaskRequest) returns (GfSpAskTaskResponse) {}
  rpc GfSpReportTask(GfSpReportTaskRequest) returns (GfSpReportTaskResponse) {}
  rpc GfSpPickVirtualGroupFamily(GfSpPickVirtualGroupFamilyRequest) returns (GfSpPickVirtualGroupFamilyResponse) {}
  rpc GfSpNotifyMigrateSwapOut(GfSpNotifyMigrateSwapOutRequest) returns (GfSpNotifyMigrateSwapOutResponse) {}
  rpc GfSpQueryTasksStats(GfSpQueryTasksStatsRequest) returns (GfSpQueryTasksStatsResponse) {}
  rpc GfSpQueryBucketMigrationProgress(GfSpQueryBucketMigrationProgressRequest) returns (GfSpQueryBucketMigrationProgressResponse) {}
  rpc GfSpNotifyPreMigrateBucketAndDeductQuota(GfSpNotifyPreMigrateBucketRequest) returns (GfSpNotifyPreMigrateBucketResponse) {}
  rpc GfSpNotifyPostMigrateAndRecoupQuota(GfSpNotifyPostMigrateBucketRequest) returns (GfSpNotifyPostMigrateBucketResponse) {}
  rpc GfSpResetRecoveryFailedList(GfSpResetRecoveryFailedListRequest) returns (GfSpResetRecoveryFailedListResponse) {}
}
